Long - update API tin tuc

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -22,6 +22,31 @@
                         </a>
                     </li>
 
+                    <li class='sidebar-title'>QUẢN LÝ DỰ ÁN TỪ THIỆN</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/projectCategories}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Danh Mục</span>
+                        </a>
+                        <a th:href="@{/home}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Dự Án</span>
+                        </a>
+                    </li>
+
+                    <li class='sidebar-title'>QUẢN LÝ TIN TỨC TỪ THIỆN</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/ncategories}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Danh Mục</span>
+                        </a>
+                        <a th:href="@{/news}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Tin Tức</span>
+                        </a>
+                    </li>
+
+
                     <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
                             <i data-feather="triangle" width="20"></i>
