--- a/charity/src/main/resources/templates/pages/pcategories.html
+++ b/charity/src/main/resources/templates/pages/pcategories.html
@@ -12,7 +12,7 @@
     <div class="main-content container-fluid" layout:fragment="content">
         <div class="container my-2" align="center">
             <h1>QUẢN LÝ DANH MỤC DỰ ÁN TỪ THIỆN</h1>
-            <a th:href="@{/admin/projectCategory}" class="btn btn-info" mt-2>Thêm danh mục</a>
+            <a th:href="@{/admin/pcategory}" class="btn btn-info" mt-2>Thêm danh mục</a>
 
             <div class="table-responsive">
                 <table class="table table-bordered mb-0">
@@ -30,8 +30,8 @@
                             <td th:text="${c.name}"></td>
                             <td></td>
                             <td>
-                                <a class="btn btn-primary">Update</a>
-                                <a class="btn btn-danger">Delete</a>
+                                <a class="btn btn-primary" th:href="@{/admin/pcategory/{id}(id=${c.id})}">Update</a>
+                                <a class="btn btn-danger" th:attr="path=@{/admin/pcategory/{id}(id=${c.id})}"  onclick="deleteProjectCategory(this.getAttribute('path'))">Delete</a>
                             </td>
                         </tr>
                     </tbody>
@@ -45,3 +45,17 @@
 </body>
 
 </html>
+<script>
+    function deleteProjectCategory(path) {
+        if (confirm("Bạn chắc chắn xóa không?") === true) {
+        fetch(path, {
+            method: "delete"
+        }).then(res => {
+            if (res.status === 204)
+                location.reload();
+            else
+                alert("Lỗi!!!");
+        });
+    }
+}
+</script>
