--- a/charity/src/main/resources/templates/pages/project.html
+++ b/charity/src/main/resources/templates/pages/project.html
@@ -16,7 +16,7 @@
             </div>
             <div class="card-content">
                 <div class="card-body">
-                    <form th:action="@{/admin/project}" method="post" th:object="${project}">
+                    <form th:action="@{/admin/project}" method="post" th:object="${project}" enctype="multipart/form-data">
                         <input type="hidden" id="projectId" name="projectId"  th:field="*{id}"/>
                         <div class="form-body">
                             <div class="row">
@@ -73,6 +73,13 @@
                                 <div class="col-md-8 form-group">
                                     <input type="text" id="status" name="status" th:field="*{status}"
                                         class="form-control" />
+                                </div>
+                                <div class="col-md-4">
+                                    <label>Hình Ảnh</label>
+                                </div>
+                                <div class="col-md-8 form-group">
+                                    <input type="file" id="status" name="status" th:field="*{files}"
+                                        class="form-control" multiple="multiple"/>
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
                                     <button type="submit" class="btn btn-primary me-1 mb-1">Submit</button>
