--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -15,7 +15,7 @@
             <div class="sidebar-menu">
                 <ul class="menu">
                     <li class='sidebar-title'>Main Menu</li>
-                    <li class="sidebar-item active ">
+                    <li class="sidebar-item">
                         <a th:href="@{/}" class='sidebar-link'>
                             <i data-feather="home" width="20"></i>
                             <span>Dashboard</span>
@@ -24,7 +24,7 @@
 
                     <li class='sidebar-title'>QUẢN LÝ DỰ ÁN TỪ THIỆN</li>
                     <li class="sidebar-item">
-                        <a th:href="@{/projectCategories}" class='sidebar-link'>
+                        <a th:href="@{/pcategories}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
                             <span>Danh Mục</span>
                         </a>
