--- a/charity/src/main/resources/templates/pages/ncategories.html
+++ b/charity/src/main/resources/templates/pages/ncategories.html
@@ -30,8 +30,8 @@
                             <td th:text="${c.name}"></td>
                             <td></td>
                             <td>
-                                <a class="btn btn-primary">Update</a>
-                                <a class="btn btn-danger">Delete</a>
+                                <a class="btn btn-primary" th:href="@{/admin/ncategory/{id}(id=${c.id})}">Update</a>
+                                <a class="btn btn-danger" th:attr="path=@{/admin/ncategory/{id}(id=${c.id})}"  onclick="deleteNewsCategory(this.getAttribute('path'))">Delete</a>
                             </td>
                         </tr>
                     </tbody>
@@ -45,3 +45,17 @@
 </body>
 
 </html>
+<script>
+    function deleteNewsCategory(path) {
+        if (confirm("Bạn chắc chắn xóa không?") === true) {
+        fetch(path, {
+            method: "delete"
+        }).then(res => {
+            if (res.status === 204)
+                location.reload();
+            else
+                alert("Lỗi!!!");
+        });
+    }
+}
+</script>
