--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -28,7 +28,7 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Danh Mục</span>
                         </a>
-                        <a th:href="@{/home}" class='sidebar-link'>
+                        <a th:href="@{/projects}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
                             <span>Dự Án</span>
                         </a>
