--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -46,6 +46,14 @@
                         </a>
                     </li>
 
+                    <li class='sidebar-title'>QUẢN LÝ NGƯỜI DÙNG</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/users}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Tài Khoản</span>
+                        </a>
+                    </li>
+
 
                     <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
