[Long] - Update volunteer, skill

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -54,6 +54,18 @@
                         </a>
                     </li>
 
+                    <li class='sidebar-title'>QUẢN LÝ TÌNH NGUYỆN</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/volunteers}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Tình Nguyện Viên</span>
+                        </a>
+                        <a th:href="@{/skills}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Kỹ Năng</span>
+                        </a>
+                    </li>
+
 
                     <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
