--- a/charity/src/main/resources/templates/fragments/header.html
+++ b/charity/src/main/resources/templates/fragments/header.html
@@ -67,7 +67,9 @@
                 <div class="dropdown-menu dropdown-menu-end">
                     <a class="dropdown-item" href="#"><i data-feather="user"></i> Account</a>
                     <a class="dropdown-item active" href="#"><i data-feather="mail"></i> Messages</a>
-                    <a class="dropdown-item" href="#"><i data-feather="settings"></i> Settings</a>
+                    <a class="dropdown-item" th:href="@{/admin/profile/{username}(username=${#authentication.principal.username})}">
+                        <i data-feather="settings"></i> Settings
+                    </a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" th:href="@{/logout}"><i data-feather="log-out"></i> Logout</a>
                 </div>
