--- a/charity/src/main/resources/templates/pages/test.html
+++ b/charity/src/main/resources/templates/pages/test.html
@@ -1,15 +1,74 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/dashboard}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{layouts/dashboard}">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Add Project Category</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
-        <p>HELLO</p>
+        <div class="container">
+            <div class="header clearfix">
+                <h3 class="text-muted">KẾT QUẢ THANH TOÁN</h3>
+            </div>
+            <div class="table-responsive">
+                <div class="form-group">
+                    <label >Mã giao dịch thanh toán:</label>
+                    <label><%=request.getParameter("vnp_TxnRef")%></label>
+                </div>    
+                <div class="form-group">
+                    <label >Số tiền:</label>
+                    <label><%=request.getParameter("vnp_Amount")%></label>
+                </div>  
+                <div class="form-group">
+                    <label >Mô tả giao dịch:</label>
+                    <label><%=request.getParameter("vnp_OrderInfo")%></label>
+                </div> 
+                <div class="form-group">
+                    <label >Mã lỗi thanh toán:</label>
+                    <label><%=request.getParameter("vnp_ResponseCode")%></label>
+                </div> 
+                <div class="form-group">
+                    <label >Mã giao dịch tại CTT VNPAY-QR:</label>
+                    <label><%=request.getParameter("vnp_TransactionNo")%></label>
+                </div> 
+                <div class="form-group">
+                    <label >Mã ngân hàng thanh toán:</label>
+                    <label><%=request.getParameter("vnp_BankCode")%></label>
+                </div> 
+                <div class="form-group">
+                    <label >Thời gian thanh toán:</label>
+                    <label><%=request.getParameter("vnp_PayDate")%></label>
+                </div> 
+                <div class="form-group">
+                    <label >Tình trạng giao dịch:</label>
+                    <label>
+                        <%
+                            if (signValue.equals(vnp_SecureHash)) {
+                                if ("00".equals(request.getParameter("vnp_TransactionStatus"))) {
+                                    out.print("Thành công");
+                                } else {
+                                    out.print("Không thành công");
+                                }
+
+                            } else {
+                                out.print("invalid signature");
+                            }
+                        %></label>
+                </div> 
+            </div>
+            <p>
+                &nbsp;
+            </p>
+            <footer class="footer">
+                <p>&copy; VNPAY 2020</p>
+            </footer>
+        </div>  
     </div>
+
 </body>
 
 </html>
