--- a/charity/src/main/resources/templates/layouts/dashboard.html
+++ b/charity/src/main/resources/templates/layouts/dashboard.html
@@ -20,7 +20,7 @@
         <span th:replace="~{fragments/sidebar :: sidebar}"></span>
         <div id="main"><!--Content id-->
             <span th:replace="~{fragments/header :: header}"></span>
-            <div class="main-content container-fluid" layout:fragment="content"><!--dynamic content-->
+            <div class="main-content container-fluid" layout:fragment="content" style="font-size: 16px;"><!--dynamic content-->
                 <!--you can replace this using page-->
             </div>
             <span th:replace="~{fragments/footer :: footer}"></span>
