--- a/charity/src/main/resources/templates/pages/skills.html
+++ b/charity/src/main/resources/templates/pages/skills.html
@@ -10,10 +10,9 @@
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
+        <h1 class="text-info text-center">QUẢN LÝ KỸ NĂNG TỪ THIỆN</h1>
+        <a th:href="@{/admin/skill}" class="btn btn-info mt-5" >THÊM KỸ NĂNG</a>
         <div class="container my-2" align="center">
-            <h1>QUẢN LÝ KỸ NĂNG TỪ THIỆN</h1>
-            <a th:href="@{/admin/skill}" class="btn btn-info" mt-2>Thêm kỹ năng</a>
-
             <div class="table-responsive">
                 <table class="table table-bordered mb-0">
                     <thead>
@@ -29,7 +28,8 @@
                             <td th:text="${s.name}"></td>
                             <td>
                                 <a class="btn btn-primary" th:href="@{/admin/skill/{id}(id=${s.id})}">Update</a>
-                                <a class="btn btn-danger" th:attr="path=@{/admin/skill/{id}(id=${s.id})}"  onclick="deleteSkill(this.getAttribute('path'))">Delete</a>
+                                <a class="btn btn-danger" th:attr="path=@{/admin/skill/{id}(id=${s.id})}"
+                                    onclick="deleteSkill(this.getAttribute('path'))">Delete</a>
                             </td>
                         </tr>
                     </tbody>
@@ -46,14 +46,14 @@
 <script>
     function deleteSkill(path) {
         if (confirm("Bạn chắc chắn xóa không?") === true) {
-        fetch(path, {
-            method: "delete"
-        }).then(res => {
-            if (res.status === 204)
-                location.reload();
-            else
-                alert("Lỗi!!!");
-        });
+            fetch(path, {
+                method: "delete"
+            }).then(res => {
+                if (res.status === 204)
+                    location.reload();
+                else
+                    alert("Lỗi!!!");
+            });
+        }
     }
-}
 </script>
