--- a/charity/src/main/resources/templates/pages/users.html
+++ b/charity/src/main/resources/templates/pages/users.html
@@ -10,9 +10,8 @@
 <body>
 
     <div class="main-content container-fluid" layout:fragment="content">
-        <div class="container my-2" align="center">
-            <h1>QUẢN LÝ NGƯỜI DÙNG</h1>
-
+        <h1 class="text-info text-center">QUẢN LÝ NGƯỜI DÙNG</h1>
+        <div class="container my-2 mt-5" align="center">
             <div class="table-responsive">
                 <table class="table table-striped mb-0">
                     <thead>
