--- a/charity/src/main/resources/templates/pages/skill.html
+++ b/charity/src/main/resources/templates/pages/skill.html
@@ -12,7 +12,7 @@
     <div class="main-content container-fluid" layout:fragment="content">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">THÊM THỂ LOẠI</h4>
+                <h4 class="card-title">THÊM KĨ NĂNG</h4>
             </div>
             <div class="card-content">
                 <div class="card-body">
