[Long] - Update report

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -66,6 +66,14 @@
                         </a>
                     </li>
 
+                    <li class='sidebar-title'>QUẢN LÝ MẠNG XÃ HỘI</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/reports}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Báo Cáo</span>
+                        </a>
+                    </li>
+
 
                     <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
@@ -75,7 +83,10 @@
 
                         <ul class="submenu ">
                             <li>
-                                <a th:href="@{/projectCategories}">QUẢN LÝ THỂ LOẠI DỰ ÁN</a>
+                                <a th:href="@{/projectCategories}">
+                                    <i data-feather="file-text" width="20"></i>
+                                    <span>BÁO CÁO</span>
+                                </a>
                             </li>
 
                             <li>
