--- a/charity/src/main/resources/templates/pages/index.html
+++ b/charity/src/main/resources/templates/pages/index.html
@@ -13,7 +13,7 @@
         <h1 class="text-center text-info">QUẢN LÝ DỰ ÁN TỪ THIỆN</h1>
         <a th:href="@{/admin/project}" class="btn btn-info mt-5">THÊM DỰ ÁN</a>
 
-        <div class="container my-2" align="center">
+        <div class="container my-2">
             <div class="table-responsive">
                 <table class="table table-striped mb-0">
                     <thead>
