--- a/charity/src/main/resources/templates/pages/news.html
+++ b/charity/src/main/resources/templates/pages/news.html
@@ -12,13 +12,13 @@
     <div class="main-content container-fluid" layout:fragment="content">
         <h1 class="text-center text-info">QUẢN LÝ TIN TỨC TỪ THIỆN</h1>
         <a th:href="@{/admin/new}" class="btn btn-info mt-5" >THÊM TIN TỨC</a>
-        <div class="container my-2" align="center">
+        <div class="container my-2">
             <div class="table-responsive">
                 <table class="table table-striped mb-0">
                     <thead>
                         <tr>
                             <th>STT</th>
-                            <td>HÌNH ẢNH</td>
+                            <th>HÌNH ẢNH</th>
                             <th>TIN TỨC</th>
                             <th>NGÀY TẠO</th>
                             <th>CHỨC NĂNG</th>
