--- a/charity/src/main/resources/templates/pages/users.html
+++ b/charity/src/main/resources/templates/pages/users.html
@@ -17,7 +17,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <td>TÀI KHOẢN</td>
+                            <th>TÀI KHOẢN</th>
                             <th>EMAIL</th>
                             <th>TRẠNG THÁI</th>
                             <th>TÍNH NĂNG</th>
