--- a/charity/src/main/resources/templates/pages/volunteers.html
+++ b/charity/src/main/resources/templates/pages/volunteers.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
         <h1 class="text-center text-info">QUẢN LÝ HOẠT ĐỘNG TÌNH NGUYỆN</h1>
-        <div class="container my-2 mt-5" align="center">
+        <div class="container my-2 mt-5">
             <div class="table-responsive">
                 <table class="table table-bordered mb-0">
                     <thead>
