--- a/charity/src/main/resources/templates/pages/pcategories.html
+++ b/charity/src/main/resources/templates/pages/pcategories.html
@@ -12,7 +12,7 @@
     <div class="main-content container-fluid" layout:fragment="content">
         <h1 class="text-info text-center">QUẢN LÝ DANH MỤC DỰ ÁN TỪ THIỆN</h1>
         <a th:href="@{/admin/pcategory}" class="btn btn-info mt-5" >THÊM DANH MỤC</a>
-        <div class="container my-2" align="center">
+        <div class="container my-2">
             <div class="table-responsive">
                 <table class="table table-bordered mb-0">
                     <thead>
