--- a/charity/src/main/resources/templates/pages/skills.html
+++ b/charity/src/main/resources/templates/pages/skills.html
@@ -12,7 +12,7 @@
     <div class="main-content container-fluid" layout:fragment="content">
         <h1 class="text-info text-center">QUẢN LÝ KỸ NĂNG TỪ THIỆN</h1>
         <a th:href="@{/admin/skill}" class="btn btn-info mt-5" >THÊM KỸ NĂNG</a>
-        <div class="container my-2" align="center">
+        <div class="container my-2" >
             <div class="table-responsive">
                 <table class="table table-bordered mb-0">
                     <thead>
